Add generic OAuth deployment support
